--- a/data/projImgMapper.json
+++ b/data/projImgMapper.json
@@ -1,222 +1,30 @@
 [
     {
-        "projID": "proj1",
-        "imgID": "img1"
+        "project": "proj1",
+        "images": ["img1","img2","img3","img4","img5","img6","img7","img8","img9","img10","img11"]
     },
     {
-        "projID": "proj1",
-        "imgID": "img2"
+        "project": "proj2",
+        "images": ["img12","img13","img14","img15","img16","img17","img18","img19","img20","img21","img22"]
     },
     {
-        "projID": "proj1",
-        "imgID": "img3"
+        "project": "proj3",
+        "images": ["img23","img24","img25","img26","img27","img28","img29","img30","img31","img32"]
     },
     {
-        "projID": "proj1",
-        "imgID": "img4"
+        "project": "proj4",
+        "images": ["img33","img34","img35","img36","img37","img38"]
     },
     {
-        "projID": "proj1",
-        "imgID": "img5"
+        "project": "proj5",
+        "images": ["img39","img40","img41","img42","img43"]
     },
     {
-        "projID": "proj1",
-        "imgID": "img6"
+        "project": "proj6",
+        "images": ["img44","img45","img46","img47","img48","img49"]
     },
     {
-        "projID": "proj1",
-        "imgID": "img7"
-    },
-    {
-        "projID": "proj1",
-        "imgID": "img8"
-    },
-    {
-        "projID": "proj1",
-        "imgID": "img9"
-    },
-    {
-        "projID": "proj1",
-        "imgID": "img10"
-    },
-    {
-        "projID": "proj1",
-        "imgID": "img11"
-    },
-    {
-        "projID": "proj2",
-        "imgID": "img12"
-    },
-    {
-        "projID": "proj2",
-        "imgID": "img13"
-    },
-    {
-        "projID": "proj2",
-        "imgID": "img14"
-    },
-    {
-        "projID": "proj2",
-        "imgID": "img15"
-    },
-    {
-        "projID": "proj2",
-        "imgID": "img16"
-    },
-    {
-        "projID": "proj2",
-        "imgID": "img17"
-    },
-    {
-        "projID": "proj2",
-        "imgID": "img18"
-    },
-    {
-        "projID": "proj2",
-        "imgID": "img19"
-    },
-    {
-        "projID": "proj2",
-        "imgID": "img20"
-    },
-    {
-        "projID": "proj2",
-        "imgID": "img21"
-    },
-    {
-        "projID": "proj2",
-        "imgID": "img22"
-    },
-    {
-        "projID": "proj3",
-        "imgID": "img23"
-    },
-    {
-        "projID": "proj3",
-        "imgID": "img24"
-    },
-    {
-        "projID": "proj3",
-        "imgID": "img25"
-    },
-    {
-        "projID": "proj3",
-        "imgID": "img26"
-    },
-    {
-        "projID": "proj3",
-        "imgID": "img27"
-    },
-    {
-        "projID": "proj3",
-        "imgID": "img28"
-    },
-    {
-        "projID": "proj3",
-        "imgID": "img29"
-    },
-    {
-        "projID": "proj3",
-        "imgID": "img30"
-    },
-    {
-        "projID": "proj3",
-        "imgID": "img31"
-    },
-    {
-        "projID": "proj3",
-        "imgID": "img32"
-    },
-    {
-        "projID": "proj4",
-        "imgID": "img33"
-    },
-    {
-        "projID": "proj4",
-        "imgID": "img34"
-    },
-    {
-        "projID": "proj4",
-        "imgID": "img35"
-    },
-    {
-        "projID": "proj4",
-        "imgID": "img36"
-    },
-    {
-        "projID": "proj4",
-        "imgID": "img37"
-    },
-    {
-        "projID": "proj4",
-        "imgID": "img38"
-    },
-    {
-        "projID": "proj5",
-        "imgID": "img39"
-    },
-    {
-        "projID": "proj5",
-        "imgID": "img40"
-    },
-    {
-        "projID": "proj5",
-        "imgID": "img41"
-    },
-    {
-        "projID": "proj5",
-        "imgID": "img42"
-    },
-    {
-        "projID": "proj5",
-        "imgID": "img43"
-    },
-    {
-        "projID": "proj6",
-        "imgID": "img44"
-    },
-    {
-        "projID": "proj6",
-        "imgID": "img45"
-    },
-    {
-        "projID": "proj6",
-        "imgID": "img46"
-    },
-    {
-        "projID": "proj6",
-        "imgID": "img47"
-    },
-    {
-        "projID": "proj6",
-        "imgID": "img48"
-    },
-    {
-        "projID": "proj6",
-        "imgID": "img49"
-    },
-    {
-        "projID": "proj7",
-        "imgID": "img50"
-    },
-    {
-        "projID": "proj7",
-        "imgID": "img51"
-    },
-    {
-        "projID": "proj7",
-        "imgID": "img52"
-    },
-    {
-        "projID": "proj7",
-        "imgID": "img53"
-    },
-    {
-        "projID": "proj7",
-        "imgID": "img54"
-    },
-    {
-        "projID": "proj7",
-        "imgID": "img55"
+        "project": "proj7",
+        "images": ["img50","img51","img52","img53","img54","img55"]
     }
 ]
