projects are loading from the db. added button to refresh database, but not yet reloading the page

--- a/db/resetData/projects.json
+++ b/db/resetData/projects.json
@@ -93,7 +93,7 @@
         "name": "proj6",
         "shortTitle": "",
         "shortDesc": "",
-        "title": "VERTIKALE HÄUSER” - WOHNHAUS PROJEKT",
+        "title": "VERTIKALE HÄUSER - WOHNHAUS PROJEKT",
         "description": "Die Vertikale Häuser bieten zwei Arten zu wohnen: einen Turm mit städtischer Dichte und weite Ausblicke und einen langen horizontalen Block, mit Innenhöfe, der eine enge Beziehung zum Umfeld und zur Nachbarshaft sucht. Der Turm ist in verschiedene Wohnungstypen aufgeteilt, von 2 bis 4-Zimmer-Wohnungen. Der horizontale Block mischt 1-Zimmer- Wohnungen (Studios) mit größer Maisonetten, die unabhängig vermieten werden können oder einen Familienkreis dienen können (Familie + emanzipiertes Kind oder Großeltern, z.B.)",
         "category": "",
         "startYear": "2007",
