--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "lgportfolio",
   "version": "1.0.0",
   "description": "An architect portfolio",
-  "main": "index.js",
+  "main": "server.js",
   "repository": {
       "type": "git",
       "url": "https://github.com/MadalenaGoncalves/lgportfolio.git"
   },
+  "engines": {
+    "node": "6.2.2"
+  },
   "dependencies": {
     "mongodb"    : "2.1.6",
+    "mongoose"   : "3.8.1",
     "express"    : "4.13.4",
     "ejs"        : "0.8.5",
-    "ejs-locals" : "1.0.2",
-    "mongoose"   : "3.8.1"
+    "ejs-locals" : "1.0.2"
   },
   "devDependencies": {},
   "scripts": {
