--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "serve-favicon": "^2.4.3"
   },
   "devDependencies": {
+    "node-inspector": "^1.1.1",
     "node-sass": "^4.5.3",
+    "nodemon": "^1.11.0",
     "uglify-js": "^3.0.7"
   },
   "author": "MadalenaGoncalves",
