--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "async": "^1.5.2",
     "body-parser": "^1.17.1",
     "express": "^4.14.1",
-    "jade": "^1.11.0",
     "jquery": "^3.2.1",
     "mongodb": "^2.1.21",
     "mongoose": "^4.5.10",
     "node-mailer": "^0.1.1",
+    "pug": "^2.0.0-rc.1",
     "serve-favicon": "^2.4.3"
   },
   "devDependencies": {
