--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test-build": "webpack",
-    "build": "webpack --optimize-minimize",
-    "start": "webpack-dev-server",
+    "build": "webpack --watch",
+    "build:prod": "webpack -p --progress",
+    "start": "webpack-dev-server --inline --progress",
+    "dev": "nodemon src/server.js",
     "debug": "nodemon --debug-brk src/server.js",
     "build-css": "node-sass --output-style compressed public/sass/styles.scss -o public/static/css",
-    "sass": "node-sass -w --output-style compressed public/sass/styles.scss -o public/static/css",
-    "uglify": "uglifyjs public/js/app.js public/js/controllers/* -m -c -o public/static/js/scripts.min.js"
+    "sass": "node-sass -w --output-style compressed public/sass/styles.scss -o public/static/css"
   },
   "dependencies": {
     "angular": "^1.6.4",
@@ -27,6 +27,7 @@
     "angular-material": "^1.1.4",
     "angular-messages": "^1.6.4",
     "angular-route": "^1.6.4",
+    "@uirouter/angularjs": "^1.0.3",
     "async": "^1.5.2",
     "body-parser": "^1.17.1",
     "express": "^4.14.1",
@@ -34,11 +35,16 @@
     "mongodb": "^2.1.21",
     "mongoose": "^4.5.10",
     "node-mailer": "^0.1.1",
-    "pug": "^2.0.0-rc.1",
     "serve-favicon": "^2.4.3"
   },
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.5.0",
+    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
     "img-loader": "^2.0.0",
     "node-inspector": "^1.1.1",
     "node-sass": "^4.5.3",
@@ -47,7 +53,8 @@
     "style-loader": "^0.17.0",
     "url-loader": "^0.5.8",
     "webpack": "^2.5.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "webpack-node-externals": "^1.6.0"
   },
   "author": "MadalenaGoncalves",
   "license": "ISC",
