--- a/package.json
+++ b/package.json
@@ -21,19 +21,20 @@
     "sass": "node-sass -w --output-style compressed public/sass/styles.scss -o public/static/css"
   },
   "dependencies": {
+    "@uirouter/angularjs": "^1.0.3",
     "angular": "^1.6.4",
     "angular-animate": "^1.6.4",
     "angular-aria": "^1.6.4",
     "angular-material": "^1.1.4",
     "angular-messages": "^1.6.4",
     "angular-route": "^1.6.4",
-    "@uirouter/angularjs": "^1.0.3",
     "async": "^1.5.2",
     "body-parser": "^1.17.1",
     "express": "^4.14.1",
     "jquery": "^3.2.1",
     "mongodb": "^2.1.21",
     "mongoose": "^4.5.10",
+    "multer": "^1.3.0",
     "node-mailer": "^0.1.1",
     "serve-favicon": "^2.4.3"
   },
