Bugfix on dbReset.js (repeated images in per project). Showing images, dates and numbers in CMS form.

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -8,7 +8,7 @@
         "category": "",
         "startYear": 2014,
         "endYear": 2014,
-        "thumbnailId": "proj1",
+        "thumbnailId": "proj1.png",
         "address": "Müllerstraße 178",
         "country": "Deutshland",
         "city": "Berlin",
@@ -27,7 +27,7 @@
         "category": "",
         "startYear": 2010,
         "endYear": 2013,
-        "thumbnailId": "proj2",
+        "thumbnailId": "proj2.png",
         "address": "Richard-Sorge Strasse 11",
         "country": "",
         "city": "Berlin",
@@ -46,7 +46,7 @@
         "category": "",
         "startYear": 2011,
         "endYear": 2013,
-        "thumbnailId": "proj3",
+        "thumbnailId": "proj3.png",
         "address": "Erkrather Strasse 270",
         "country": "",
         "city": "Düsseldorf",
@@ -65,7 +65,7 @@
         "category": "",
         "startYear": 2013,
         "endYear": 2013,
-        "thumbnailId": "proj4",
+        "thumbnailId": "proj4.png",
         "address": "Erkrather Strasse 270",
         "country": "",
         "city": "Düsseldorf",
@@ -82,7 +82,7 @@
         "category": "Für das Großprojekt dieses Parkhaus für Guimarães, in Nordportugal, war das Ziel eine Verknüpfung mit der Umgebung zu schaffen. Es geht hier um ein maßstäbliches Spiel: der Baukörper soll als Zeichen in der Landschaft wirken, seine Form ist aber auch durch die Bewegung von den Autos und seine Maßeinheit bestimmt.",
         "startYear": 2006,
         "endYear": 2006,
-        "thumbnailId": "proj5",
+        "thumbnailId": "proj5.png",
         "address": "",
         "country": "",
         "city": "Guimarães",
@@ -98,7 +98,7 @@
         "category": "",
         "startYear": 2007,
         "endYear": 2007,
-        "thumbnailId": "proj6",
+        "thumbnailId": "proj6.png",
         "address": "",
         "country": "",
         "city": "Guimarães",
@@ -114,7 +114,7 @@
         "category": "",
         "startYear": 2008,
         "endYear": 2008,
-        "thumbnailId": "proj7",
+        "thumbnailId": "proj7.png",
         "address": "",
         "country": "",
         "city": "Barcelona",
