--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
 			"name": "Launch",
 			"type": "node",
 			"request": "launch",
-			"program": "${workspaceRoot}/server.js",
+			"program": "${workspaceRoot}/src/server.js",
 			"stopOnEntry": false,
 			"args": [],
 			"cwd": "${workspaceRoot}/.",
@@ -16,9 +16,9 @@
 			"env": {
 				"NODE_ENV": "development"
 			},
-			"externalConsole": false,
+			"console": "externalTerminal",
 			"sourceMaps": false,
-			"outDir": null
+			"outFiles": []
 		},
 		{
 			"name": "Attach",
